test/fixtures/type-error/notExhaustiveMatch.lys
enum color {
  Red
  Green
  Blue
}


fun test(x: color): color =
  match x {
    // there MUST be an error here ^^^^


    case is Red -> Red
    case is Green -> Green
  }

fun test1(x: color): color =
  match x {
    // there MUST NOT be error here ^^^^


    case is Red -> Red
    case is Green -> Green
    case is Blue -> Blue
  }

fun test3(x: color): color =
  match x {
    // there MUST NOT be error here ^^^^


    case is Red -> Red
    else -> Blue
  }